--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    cron: [ '48 * * * *' ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    cron: [ '0 0 * * *' ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
